--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,5 +2,25 @@
   "name": "Backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "repository": "https://github.com/gabrieldorneles09/mega_hack_totalvoice",
+  "author": "Gabriel Dorneles <gabrieldorneles09@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "sucrase": "^3.12.0"
+  }
 }
