--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,9 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -21,6 +23,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.0"
   }
 }
