--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "generate-sms-verification-code": "^1.0.5",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.4"
   },
