--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "generate-sms-verification-code": "^1.0.5",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "totalvoice-node": "^1.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
