--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "dependencies": {
+    "antd": "^3.26.9",
+    "antd-dayjs-webpack-plugin": "^0.0.8",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
+    "jquery": "^3.4.1",
+    "jquery-mask-plugin": "^1.14.16",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-input-mask": "^2.0.4",
+    "styled-components": "^5.0.1",
     "totalvoice-node": "^1.9.0"
   }
 }
