--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/gabrieldorneles09/mega_hack_totalvoice",
