--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,14 +8,16 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.9",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "resolve-url-loader": "^3.1.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
@@ -38,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-loader": "^3.0.4",
+    "jquery": "^3.4.1",
+    "tether": "^1.4.7"
   }
 }
