--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "generate-sms-verification-code": "^1.0.5",
     "mysql2": "^2.1.0",
